[package]
categories = ["gui"]
description = "Types for handling UI scaling"
edition = "2021"
keywords = ["DPI", "HiDPI", "scale-factor"]
name = "dpi"
version = "0.1.1"

[features]
mint = ["dep:mint"]
serde = ["dep:serde"]

[dependencies]
mint = { version = "0.5.6", optional = true }
serde = { version = "1", features = ["serde_derive"], optional = true }

[package.metadata.docs.rs]
features = ["mint", "serde"]
# These are all tested in CI
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    # Windows
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
    # macOS
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    # Unix (X11 & Wayland)
    "i686-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
    # iOS
    "aarch64-apple-ios",
    # Android
    "aarch64-linux-android",
    # Web
    "wasm32-unknown-unknown",
]
